--- a/cli/Cargo.toml
+++ b/cli/Cargo.toml
@@ -32,8 +32,8 @@ clap_complete_fig.workspace = true
 # serde_json.workspace = true
 # toml.workspace = true
 
-# env_logger.workspace = true
-# log.workspace = true
+env_logger.workspace = true
+log.workspace = true
 
 # tracing.workspace = true
 # tracing-error.workspace = true
