--- a/Cargo.toml
+++ b/Cargo.toml
@@ -33,9 +33,13 @@ typst-ts-compiler = "0.3"
 
 # general
 anyhow = "1"
+tokio = { version = "1.28.1", features = ["full"] }
 
 # cryptography and processing
 toml = "0.7.5"
+
+# web
+warp = { version = "0.3", features = ["compression"] }
 
 # cli
 clap = { version = "4.3", features = ["derive", "env", "unicode", "wrap_help"] }
