--- a/Cargo.toml
+++ b/Cargo.toml
@@ -37,6 +37,8 @@ tokio = { version = "1.28.1", features = ["full"] }
 
 # cryptography and processing
 toml = "0.7.5"
+serde = "1.0.164"
+serde_json = "1.0.96"
 
 # web
 warp = { version = "0.3", features = ["compression"] }
