--- a/cli/Cargo.toml
+++ b/cli/Cargo.toml
@@ -32,8 +32,8 @@ toml.workspace = true
 # chrono.workspace = true
 tokio.workspace = true
 
-# serde.workspace = true
-# serde_json.workspace = true
+serde.workspace = true
+serde_json.workspace = true
 # toml.workspace = true
 
 env_logger.workspace = true
