--- a/cli/Cargo.toml
+++ b/cli/Cargo.toml
@@ -49,13 +49,9 @@ log.workspace = true
 
 typst-ts-core.workspace = true
 typst-ts-compiler.workspace = true
+handlebars.workspace = true
 
-# typst-ts-ast-exporter.workspace = true
-# typst-ts-pdf-exporter = { workspace = true, optional = true }
-# typst-ts-raster-exporter = { workspace = true, optional = true }
-# typst-ts-serde-exporter = { workspace = true, optional = true }
 # typst-ts-svg-exporter = { workspace = true, optional = true }
-# typst-ts-tir-exporter = { workspace = true, optional = true }
 
 [build-dependencies]
 anyhow.workspace = true
