--- a/github-pages/docs/book.toml
+++ b/github-pages/docs/book.toml
@@ -1,5 +1,6 @@
 [book]
 title = "typst-book"
 description = "typst-book Documentation"
+repository = "https://github.com/Myriad-Dreamin/typst-book"
 authors = ["Myriad-Dreamin", "7mile"]
 language = "en"
