--- a/frontend/package.json
+++ b/frontend/package.json
@@ -9,10 +9,15 @@
     "typst-book Developers"
   ],
   "scripts": {
-    "build": "tsc -p ./tsconfig.lib.json --outDir dist"
+    "build": "tsc -p ./tsconfig.lib.json --outDir dist",
+    "link:local": "yarn link @myriaddreamin/typst.ts @myriaddreamin/typst-ts-renderer"
   },
   "license": "Apache-2.0",
   "private": false,
+  "dependencies": {
+    "@myriaddreamin/typst.ts": "0.3.2-rc1",
+    "@myriaddreamin/typst-ts-renderer": "0.3.2-rc1"
+  },
   "devDependencies": {
     "typescript": "^5.1.6",
     "@types/web": "^0.0.99"
