feat(cli): clean up `CompileArgs`

--- a/github-pages/docs/book.toml
+++ b/github-pages/docs/book.toml
@@ -4,3 +4,6 @@ description = "typst-book Documentation"
 repository = "https://github.com/Myriad-Dreamin/typst-book"
 authors = ["Myriad-Dreamin", "7mile"]
 language = "en"
+
+[build]
+dest-dir = "../dist"
