--- a/cli/Cargo.toml
+++ b/cli/Cargo.toml
@@ -29,6 +29,7 @@ clap_complete_fig.workspace = true
 # comemo.workspace = true
 # chrono.workspace = true
 tokio.workspace = true
+include_dir.workspace = true
 
 serde.workspace = true
 serde_json.workspace = true
