--- a/Cargo.toml
+++ b/Cargo.toml
@@ -40,6 +40,7 @@ tokio = { version = "1.28.1", features = ["full"] }
 # cryptography and processing
 serde = "1.0.164"
 serde_json = "1.0.96"
+toml = "0.7.5"
 
 # web
 warp = { version = "0.3", features = ["compression"] }
