--- a/cli/Cargo.toml
+++ b/cli/Cargo.toml
@@ -33,7 +33,7 @@ include_dir.workspace = true
 
 serde.workspace = true
 serde_json.workspace = true
-# toml.workspace = true
+toml.workspace = true
 
 env_logger.workspace = true
 log.workspace = true
