--- a/.github/workflows/gh_pages.yml
+++ b/.github/workflows/gh_pages.yml
@@ -49,7 +49,7 @@ jobs:
           dir: 'frontend'
       - name: Build Book
         run: |
-          cargo run --bin typst-book -- build -w . .\github-pages\docs\
+          cargo run --bin typst-book -- build -w . github-pages/docs
       - name: Setup Pages
         uses: actions/configure-pages@v3
       - name: Upload artifact
