--- a/Cargo.toml
+++ b/Cargo.toml
@@ -36,7 +36,9 @@ anyhow = "1"
 tokio = { version = "1.28.1", features = ["full"] }
 
 # cryptography and processing
-serde = "1.0.164"
+# https://github.com/serde-rs/serde/issues/2538#issuecomment-1684517372
+# <= 1.0.171 due to serde-rs/serde#2538
+serde = { version = ">= 1.0.126, <= 1.0.171" }
 serde_json = "1.0.96"
 toml = "0.7.5"
 
