feat(cli): add init command

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -57,6 +57,7 @@ log = "0.4.17"
 # misc
 vergen = { version = "7.5.1", features = ["build", "cargo", "git", "rustc"] }
 include_dir = "0.7.3"
+pathdiff = "0.1.0"
 
 [patch.crates-io]
 typst = { git = "https://github.com/Myriad-Dreamin/typst.git", branch = "typst.ts" }
