--- a/frontend/package.json
+++ b/frontend/package.json
@@ -9,17 +9,19 @@
     "typst-book Developers"
   ],
   "scripts": {
-    "build": "tsc -p ./tsconfig.lib.json --outDir dist",
+    "build": "tsc && vite build",
+    "dev": "vite build --watch",
     "link:local": "yarn link @myriaddreamin/typst.ts @myriaddreamin/typst-ts-renderer"
   },
   "license": "Apache-2.0",
   "private": false,
   "dependencies": {
-    "@myriaddreamin/typst.ts": "0.3.2-rc2",
-    "@myriaddreamin/typst-ts-renderer": "0.3.2-rc2"
+    "@myriaddreamin/typst-ts-renderer": "0.4.0-rc2",
+    "@myriaddreamin/typst-ts-web-compiler": "0.4.0-rc2",
+    "@myriaddreamin/typst.ts": "0.4.0-rc2"
   },
   "devDependencies": {
     "typescript": "^5.1.6",
-    "@types/web": "^0.0.99"
+    "vite": "^4.3.9"
   }
 }
