--- a/cli/Cargo.toml
+++ b/cli/Cargo.toml
@@ -26,7 +26,7 @@ clap.workspace = true
 clap_complete.workspace = true
 clap_complete_fig.workspace = true
 
-# comemo.workspace = true
+comemo.workspace = true
 # chrono.workspace = true
 tokio.workspace = true
 include_dir.workspace = true
