--- a/Cargo.toml
+++ b/Cargo.toml
@@ -23,11 +23,11 @@ strip = true
 
 [workspace.dependencies]
 
-typst = "0.7.0"
-typst-library = "0.7.0"
-typst-ts-svg-exporter = "0.4.0-rc1"
-typst-ts-core = "0.4.0-rc1"
-typst-ts-compiler = "0.4.0-rc1"
+typst = "0.8.0"
+typst-library = "0.8.0"
+typst-ts-svg-exporter = "0.4.0-rc3"
+typst-ts-core = "0.4.0-rc3"
+typst-ts-compiler = "0.4.0-rc3"
 
 handlebars = "4.3"
 
@@ -37,19 +37,17 @@ comemo = "0.3"
 tokio = { version = "1.28.1", features = ["full"] }
 
 # cryptography and processing
-# https://github.com/serde-rs/serde/issues/2538#issuecomment-1684517372
-# <= 1.0.171 due to serde-rs/serde#2538
-serde = { version = ">= 1.0.126, <= 1.0.171" }
-serde_json = "1.0.96"
-toml = "0.7.5"
+serde = { version = "1.0.188" }
+serde_json = "1.0.106"
+toml = "0.8"
 
 # web
 warp = { version = "0.3", features = ["compression"] }
 
 # cli
-clap = { version = "4.3", features = ["derive", "env", "unicode", "wrap_help"] }
-clap_complete = "4.3"
-clap_complete_fig = "4.3"
+clap = { version = "4.4", features = ["derive", "env", "unicode", "wrap_help"] }
+clap_complete = "4.4"
+clap_complete_fig = "4.4"
 
 # logging and tracing
 env_logger = "0.10.0"
@@ -61,11 +59,11 @@ include_dir = "0.7.3"
 pathdiff = "0.1.0"
 
 [patch.crates-io]
-typst = { git = "https://github.com/Myriad-Dreamin/typst.git", branch = "typst.ts" }
-typst-library = { git = "https://github.com/Myriad-Dreamin/typst.git", branch = "typst.ts" }
-typst-ts-svg-exporter = { git = "https://github.com/Myriad-Dreamin/typst.ts", rev = "47f3b700e3693653d6dff34c8acbe49a9a7666c9", package = "typst-ts-svg-exporter" }
-typst-ts-core = { git = "https://github.com/Myriad-Dreamin/typst.ts", rev = "47f3b700e3693653d6dff34c8acbe49a9a7666c9", package = "typst-ts-core" }
-typst-ts-compiler = { git = "https://github.com/Myriad-Dreamin/typst.ts", rev = "47f3b700e3693653d6dff34c8acbe49a9a7666c9", package = "typst-ts-compiler" }
+typst = { git = "https://github.com/Myriad-Dreamin/typst.git", branch = "typst.ts-v0.8.0" }
+typst-library = { git = "https://github.com/Myriad-Dreamin/typst.git", branch = "typst.ts-v0.8.0" }
+typst-ts-svg-exporter = { git = "https://github.com/Myriad-Dreamin/typst.ts", rev = "f46ee74ef10a47322be041c92086b2c413ccf1e8", package = "typst-ts-svg-exporter" }
+typst-ts-core = { git = "https://github.com/Myriad-Dreamin/typst.ts", rev = "f46ee74ef10a47322be041c92086b2c413ccf1e8", package = "typst-ts-core" }
+typst-ts-compiler = { git = "https://github.com/Myriad-Dreamin/typst.ts", rev = "f46ee74ef10a47322be041c92086b2c413ccf1e8", package = "typst-ts-compiler" }
 
 # typst = { path = "../typst/crates/typst" }
 # typst-library = { path = "../typst/crates/typst-library" }
