--- a/frontend/package.json
+++ b/frontend/package.json
@@ -16,11 +16,12 @@
   "license": "Apache-2.0",
   "private": false,
   "dependencies": {
-    "@myriaddreamin/typst-ts-renderer": "0.4.0-rc5",
-    "@myriaddreamin/typst.ts": "0.4.0-rc5"
+    "@myriaddreamin/typst-ts-renderer": "0.4.0-rc6",
+    "@myriaddreamin/typst.ts": "0.4.0-rc6"
   },
   "devDependencies": {
     "typescript": "^5.1.6",
-    "vite": "^4.3.9"
+    "vite": "^4.4.9",
+    "vite-plugin-singlefile": "^0.13.5"
   }
 }
