--- a/frontend/package.json
+++ b/frontend/package.json
@@ -16,8 +16,8 @@
   "license": "Apache-2.0",
   "private": false,
   "dependencies": {
-    "@myriaddreamin/typst-ts-renderer": "0.4.0-rc6",
-    "@myriaddreamin/typst.ts": "0.4.0-rc6"
+    "@myriaddreamin/typst-ts-renderer": "0.4.1",
+    "@myriaddreamin/typst.ts": "0.4.1"
   },
   "devDependencies": {
     "typescript": "^5.1.6",
