--- a/cli/Cargo.toml
+++ b/cli/Cargo.toml
@@ -59,4 +59,6 @@ vergen.workspace = true
 
 [features]
 embedded-fonts = []
-default = ["embedded-fonts"]
+embedded-cjk-fonts = []
+embedded-emoji-fonts = []
+default = ["embedded-fonts", "embedded-cjk-fonts", "embedded-emoji-fonts"]
