experiment dom exporter

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -24,11 +24,11 @@ strip = true
 [workspace.dependencies]
 
 typst = "0.10.0"
-typst-ts-svg-exporter = { version = "0.4.1", features = [
+typst-ts-svg-exporter = { version = "0.4.2-rc4", features = [
     "experimental-ligature",
 ] }
-typst-ts-core = "0.4.1"
-typst-ts-compiler = "0.4.1"
+typst-ts-core = "0.4.2-rc4"
+typst-ts-compiler = "0.4.2-rc4"
 
 handlebars = "4.5"
 
@@ -60,14 +60,14 @@ include_dir = "0.7.3"
 pathdiff = "0.2.1"
 
 [patch.crates-io]
-typst = { git = "https://github.com/Myriad-Dreamin/typst.git", branch = "typst.ts-v0.10.0-content-hint" }
-typst-syntax = { git = "https://github.com/Myriad-Dreamin/typst.git", branch = "typst.ts-v0.10.0-content-hint" }
-typst-ts-svg-exporter = { git = "https://github.com/Myriad-Dreamin/typst.ts", rev = "58f88e9842905d70c6822e8fd2db8b3e9a59be27", package = "typst-ts-svg-exporter" }
-typst-ts-core = { git = "https://github.com/Myriad-Dreamin/typst.ts", rev = "58f88e9842905d70c6822e8fd2db8b3e9a59be27", package = "typst-ts-core" }
-typst-ts-compiler = { git = "https://github.com/Myriad-Dreamin/typst.ts", rev = "58f88e9842905d70c6822e8fd2db8b3e9a59be27", package = "typst-ts-compiler" }
+typst = { git = "https://github.com/Myriad-Dreamin/typst.git", branch = "typst.ts-v0.11.0-content-hint" }
+typst-syntax = { git = "https://github.com/Myriad-Dreamin/typst.git", branch = "typst.ts-v0.11.0-content-hint" }
+typst-ts-svg-exporter = { git = "https://github.com/Myriad-Dreamin/typst.ts", branch = "book-exp", package = "typst-ts-svg-exporter" }
+typst-ts-core = { git = "https://github.com/Myriad-Dreamin/typst.ts", branch = "book-exp", package = "typst-ts-core" }
+typst-ts-compiler = { git = "https://github.com/Myriad-Dreamin/typst.ts", branch = "book-exp", package = "typst-ts-compiler" }
 
-# typst = { path = "../typst/crates/typst" }
-# typst-syntax = { path = "../typst/crates/typst-syntax" }
-# typst-ts-svg-exporter = { path = "../typst.ts/exporter/svg" }
-# typst-ts-compiler = { path = "../typst.ts/compiler" }
-# typst-ts-core = { path = "../typst.ts/core" }
+# typst = { path = "../../../typst/crates/typst" }
+# typst-syntax = { path = "../../../typst/crates/typst-syntax" }
+# typst-ts-svg-exporter = { path = "../../exporter/svg" }
+# typst-ts-compiler = { path = "../../compiler" }
+# typst-ts-core = { path = "../../core" }
