--- a/.gitmodules
+++ b/.gitmodules
@@ -2,3 +2,8 @@
 	path = assets/fonts
 	url = https://github.com/Myriad-Dreamin/typst.git
 	branch = assets-fonts
+[submodule "assets/artifacts"]
+	path = assets/artifacts
+	url = https://github.com/Myriad-Dreamin/typst/
+	branch = assets-book-v0.1.3
+	shadow = true
