--- a/Cargo.toml
+++ b/Cargo.toml
@@ -23,45 +23,45 @@ strip = true
 
 [workspace.dependencies]
 
-typst = "0.10.0"
-typst-ts-svg-exporter = { version = "0.4.2-rc4", features = [
+typst = "0.11.0"
+typst-ts-svg-exporter = { version = "0.5.0-rc2", features = [
     "experimental-ligature",
 ] }
-typst-ts-core = "0.4.2-rc4"
-typst-ts-compiler = "0.4.2-rc4"
+typst-ts-core = "0.5.0-rc2"
+typst-ts-compiler = "0.5.0-rc2"
 
-handlebars = "4.5"
+handlebars = "5.1"
 
 # general
 anyhow = "1"
-comemo = "0.3.1"
-tokio = { version = "1.35", features = ["full"] }
+comemo = "0.4.0"
+tokio = { version = "1.36", features = ["full"] }
 
 # cryptography and processing
-serde = { version = "1.0.193" }
-serde_json = "1.0.108"
+serde = { version = "1.0.197" }
+serde_json = "1.0.115"
 toml = "0.8"
 
 # web
 warp = { version = "0.3", features = ["compression"] }
 
 # cli
-clap = { version = "4.4", features = ["derive", "env", "unicode", "wrap_help"] }
-clap_complete = "4.4"
-clap_complete_fig = "4.4"
+clap = { version = "4.5", features = ["derive", "env", "unicode", "wrap_help"] }
+clap_complete = "4.5"
+clap_complete_fig = "4.5"
 
 # logging and tracing
-env_logger = "0.10.1"
-log = "0.4.20"
+env_logger = "0.11.3"
+log = "0.4.21"
 
 # misc
-vergen = { version = "7.5.1", features = ["build", "cargo", "git", "rustc"] }
+vergen = { version = "8.3.1", features = ["build", "cargo", "git", "rustc"] }
 include_dir = "0.7.3"
 pathdiff = "0.2.1"
 
 [patch.crates-io]
-typst = { git = "https://github.com/Myriad-Dreamin/typst.git", branch = "typst.ts-v0.11.0-content-hint" }
-typst-syntax = { git = "https://github.com/Myriad-Dreamin/typst.git", branch = "typst.ts-v0.11.0-content-hint" }
+typst = { git = "https://github.com/Myriad-Dreamin/typst.git", branch = "typst.ts-v0.11.0-3-content-hint" }
+typst-syntax = { git = "https://github.com/Myriad-Dreamin/typst.git", branch = "typst.ts-v0.11.0-3-content-hint" }
 typst-ts-svg-exporter = { git = "https://github.com/Myriad-Dreamin/typst.ts", branch = "book-exp", package = "typst-ts-svg-exporter" }
 typst-ts-core = { git = "https://github.com/Myriad-Dreamin/typst.ts", branch = "book-exp", package = "typst-ts-core" }
 typst-ts-compiler = { git = "https://github.com/Myriad-Dreamin/typst.ts", branch = "book-exp", package = "typst-ts-compiler" }
