chore: make code compile wrt latest changes

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -55,7 +55,7 @@ env_logger = "0.11.3"
 log = "0.4.21"
 
 # misc
-vergen = { version = "8.3.1", features = ["build", "cargo", "git", "rustc"] }
+vergen = { version = "8.3.1", features = ["build", "cargo", "git", "gix", "rustc"] }
 include_dir = "0.7.3"
 pathdiff = "0.2.1"
 
