--- a/cli/Cargo.toml
+++ b/cli/Cargo.toml
@@ -18,7 +18,7 @@ doc = false
 
 [dependencies]
 typst.workspace = true
-# typst-library.workspace = true
+typst-assets = { workspace = true }
 
 warp.workspace = true
 
@@ -58,7 +58,5 @@ anyhow.workspace = true
 vergen.workspace = true
 
 [features]
-embedded-fonts = []
-embedded-cjk-fonts = []
-embedded-emoji-fonts = []
-default = ["embedded-fonts", "embedded-cjk-fonts", "embedded-emoji-fonts"]
+embedded-fonts = ["typst-assets/fonts"]
+default = ["embedded-fonts"]
