--- a/.github/workflows/gh_pages.yml
+++ b/.github/workflows/gh_pages.yml
@@ -33,6 +33,7 @@ jobs:
           submodules: recursive
       - name: Download font assets
         run: |
+          mkdir -p assets/fonts
           curl -L https://github.com/Myriad-Dreamin/typst-book/releases/download/v0.1.0/charter-font-assets.tar.gz | tar -xvz -C assets/fonts
       - name: Install Rust
         uses: dtolnay/rust-toolchain@stable
@@ -44,7 +45,7 @@ jobs:
         uses: Swatinem/rust-cache@v2
       - name: Build Book
         run: |
-          cargo run --release --bin typst-book -- build --path-to-root /typst-book/ -w . github-pages/docs
+          cargo run --release --bin typst-book -- build --font-path assets/fonts --path-to-root /typst-book/ -w . github-pages/docs
       - name: Setup Pages
         uses: actions/configure-pages@v3
       - name: Upload artifact
